--- a/Bohdan/JAVASCRIPT/Jokes API/index.html
+++ b/Bohdan/JAVASCRIPT/Jokes API/index.html
@@ -12,15 +12,17 @@
         <h1>Jokes API</h1>
         <h2 id="jokes"></h2>
         <h3 id="jokesPunch"></h3>
+        <img id="picture" src="" alt="">
         <button onclick="getJoke()">Новий жарт</button>
     </div>
 
     <script>
         const jokeElement = document.getElementById('jokes');
         const jokePunchElement = document.getElementById('jokesPunch');
+        const catPictureElement = document.getElementById('picture');
 
         function getJoke(){
-            fetch('https://official-joke-api.appspot.com/jokes/radom')
+            fetch('http://dataservice.accuweather.com/forecasts/v1/daily/1day/324505?apikey=17KCN1PZp6Dbru9y6lrJANG9E3zHTteW&language=en&details=false&metric=true')
             .then(response => {
                 if(!response.ok){
                     jokeElement.textContent = 'Щось пішло не так';
@@ -32,8 +34,20 @@
             .then(data => {
                 // console.log(data.setup);
                 // console.log(data.punchline);
-                jokeElement.textContent = data.setup;
-                jokePunchElement.textContent = data.punchline;
+                // jokeElement.textContent = data.setup;
+                // jokePunchElement.textContent = data.punchline;
+                console.log(data);
+                let maxTemp = data.DailyForecasts[0].Temperature.Maximum.Value;
+
+                jokeElement.textContent = maxTemp;
+
+                if(maxTemp > 20){
+                    jokePunchElement.textContent = 'Сьогодні буде спекотно';
+                }
+                else{
+                    jokePunchElement.textContent = 'Сьогодні буде прохолодно';
+                }
+
             })
             .catch(error => {
                 jokeElement.textContent = 'Щось пішло не так';
