--- a/Bohdan/JAVASCRIPT/Local Storage/index.html
+++ b/Bohdan/JAVASCRIPT/Local Storage/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Local storage</h1>
     <input type="file" name="img" id="img">
+    <a href="gallery.html">Переглянути галерею</a>
 
     <script>
         const pictureUpload = document.getElementById('img');
