--- a/Bohdan/JAVASCRIPT/Local Storage/index.html
+++ b/Bohdan/JAVASCRIPT/Local Storage/index.html
@@ -48,6 +48,7 @@
         
         document.cookie = `name=${name}; expires=${date.toUTCString()}; path=/`;
 
+        document.cookie = `name=Andriy; expires=Thu, 01 Jan 2025 00:00:00 UTC; path=/`;
     </script>
 
 </body>
