--- a/Bohdan/JAVASCRIPT/Local Storage/index.html
+++ b/Bohdan/JAVASCRIPT/Local Storage/index.html
@@ -40,7 +40,7 @@
    
         let name = "John Smith";
 
-        let date = new Date(Date.now() + 86400e3);
+        let date = new Date(Date.now() + 5000);
 
         console.log(name);
         console.log(date);
@@ -48,7 +48,7 @@
         
         document.cookie = `name=${name}; expires=${date.toUTCString()}; path=/`;
 
-        document.cookie = `name=Andriy; expires=Thu, 01 Jan 2025 00:00:00 UTC; path=/`;
+        // document.cookie = `name=Andriy; expires=Thu, 01 Jan 2025 00:00:00 UTC; path=/`;
     </script>
 
 </body>
