--- a/Bohdan/JAVASCRIPT/Cookies/index.html
+++ b/Bohdan/JAVASCRIPT/Cookies/index.html
@@ -11,7 +11,7 @@
 
     <input id="userInput" type="text">
     <button id="save">Save</button>
-    <button id="deleteBtn">Delete</button>\
+    <button id="deleteBtn">Delete</button>
 
     <br>
     <br>
